Updated Google Analytics events

--- a/content/index.html
+++ b/content/index.html
@@ -17,8 +17,8 @@ tags:
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
 		'hitType': 'event',
 		'eventCategory': 'donation',
-		'eventAction': 'VancoDonation-carousel',
-		'eventValue': 100
+		'eventAction': 'CarouselToDonation-Jason',
+		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
@@ -37,8 +37,8 @@ tags:
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
 		'hitType': 'event',
 		'eventCategory': 'donation',
-		'eventAction': 'VancoDonation-carousel',
-		'eventValue': 100
+		'eventAction': 'CarouselToDonation-Ricardo',
+		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
@@ -59,8 +59,8 @@ tags:
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
 		'hitType': 'event',
 		'eventCategory': 'donation',
-		'eventAction': 'VancoDonation-carousel',
-		'eventValue': 100
+		'eventAction': 'CarouselToDonation-Monica',
+		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
