--- a/content/index.html
+++ b/content/index.html
@@ -5,11 +5,16 @@ tags:
   - sa-cdc
 ---
 
+<script>
+  var active = Math.floor(Math.random()) + 1;
+  $( "div.item:nth-child("+active+")" ).addClass("active");
+</script>
+
 <div class="bs-docs-featurette">
-  <div id="show" class="row carousel slide" data-ride="carousel">
+  <div id="show" class="row carousel slide" data-ride="carousel" data-interval="1200000">
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item active">
+      <div class="item">
         <img src="static/imgs/pic-content/frontpage1.jpg" alt="A">
           <div class="carousel-caption captionleft">
             <h3 class="carousel frontpage">Help us Bring Back A Smile</h3>
