--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,7 @@ tags:
 
 <script>
   var active = Math.floor(Math.random()) + 1;
-  $( "div.item:nth-child("+active+")" ).addClass("active");
+  $( "div.item:nth-child(2)" ).addClass("active");
 </script>
 
 <div class="bs-docs-featurette">
