--- a/content/index.html
+++ b/content/index.html
@@ -7,14 +7,15 @@ tags:
 
 <script>
   var active = Math.floor(Math.random()) + 1;
-  $( "div.item" ).eq(active).addClass("active");
+  //$( "div.item" ).eq(active).addClass("active");
+  console.log("Active Elemet: "+active);
 </script>
 
 <div class="bs-docs-featurette">
   <div id="show" class="row carousel slide" data-ride="carousel" data-interval="1200000">
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item">
+      <div class="item active">
         <img src="static/imgs/pic-content/frontpage1.jpg" alt="A">
           <div class="carousel-caption captionleft">
             <h3 class="carousel frontpage">Help us Bring Back A Smile</h3>
