--- a/content/index.html
+++ b/content/index.html
@@ -9,6 +9,7 @@ tags:
   var active = Math.floor(Math.random()) + 1;
   //$( "div.item" ).eq(active).addClass("active");
   console.log("Active Elemet: "+active);
+  console.log($( "div.item" ).eq(active));
 </script>
 
 <div class="bs-docs-featurette">
