--- a/content/index.html
+++ b/content/index.html
@@ -5,17 +5,6 @@ tags:
   - sa-cdc
 ---
 
-<script>
-  var active = Math.floor(Math.random()) * 3;
-  //$( "div.item" ).eq(active).addClass("active");
-  console.log("Active Elemet: "+active);
-  $.fn.log = function() {
-  console.log.apply(console, this);
-  return this;
-};
-  $( "div.item" ).log();
-</script>
-
 <div class="bs-docs-featurette">
   <div id="show" class="row carousel slide" data-ride="carousel" data-interval="1200000">
     <!-- Wrapper for slides -->
@@ -86,6 +75,11 @@ tags:
         </div>
     </div>
   </div>
+  
+  <script>
+    var active = Math.floor(Math.random() * 4);
+    $( "div.item" ).eq(active).addClass("active");
+  </script>
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
