--- a/content/index.html
+++ b/content/index.html
@@ -79,6 +79,7 @@ tags:
   <script>
     var active = Math.floor(Math.random() * 4);
     $( "div.item" ).eq(active).addClass("active");
+    console.log(active);
   </script>
 
 <div class="row">
