--- a/content/index.html
+++ b/content/index.html
@@ -77,9 +77,9 @@ tags:
   </div>
   
   <script>
-    var active = Math.floor(Math.random() * 4);
+    var active = Math.floor(Math.random() * 3);
     $( "div.item" ).eq(active).addClass("active");
-    console.log(active);
+    //console.log(active);
   </script>
 
 <div class="row">
