Added sponsorship levels

--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -34,43 +34,80 @@ tags:
         </ul>
       </div>
     </div>
-    
     <div class="row">
     <div class="col-md-4">
       <hr class="full-rule">
+      <p class="text-center">
+        <h2>Beacon - $5,000</h2>
+      </p>
       <p class="text-center partner">
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
       </p>
-      <p class="text-center">
-        <h2>Beacon Sponsor</h2>
-      </p>
       <p>
-      Blurb...
+      <a href="">Support now</a>
       </p>
     </div>
     <div class="col-md-4">
       <hr class="full-rule">
+      <p class="text-center">
+        <h2>Lantern - $2,500</h2>
+      </p>
       <p class="text-center partner">
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
       </p>
-      <p class="text-center">
-        <h2>Beacon Sponsor</h2>
-      </p>
       <p>
-      Blurb...
+      <a href="">Support now</a>
       </p>
     </div>
     <div class="col-md-4">
       <hr class="full-rule">
+      <p class="text-center">
+        <h2>Twinkle - $1,250</h2>
+      </p>
       <p class="text-center partner">
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
       </p>
-      <p class="text-center">
-        <h2>Twinkle Sponsor</h2>
-      </p>
       <p>
-      Blurb...
+      <a href="">Support now</a>
       </p>
     </div>
   </div>
+    <div class="row">
+      <div class="col-md-4">
+        <hr class="full-rule">
+        <p class="text-center partner">
+          <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        </p>
+        <p class="text-center">
+          <h2>Beacon Sponsor</h2>
+        </p>
+        <p>
+          Blurb...
+        </p>
+      </div>
+      <div class="col-md-4">
+        <hr class="full-rule">
+        <p class="text-center partner">
+          <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        </p>
+        <p class="text-center">
+          <h2>Beacon Sponsor</h2>
+        </p>
+        <p>
+          Blurb...
+        </p>
+      </div>
+      <div class="col-md-4">
+        <hr class="full-rule">
+        <p class="text-center partner">
+          <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        </p>
+        <p class="text-center">
+          <h2>Twinkle Sponsor</h2>
+        </p>
+        <p>
+          Blurb...
+        </p>
+      </div>
+    </div>
 </div>
