--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -29,14 +29,14 @@ tags:
       <div class="col-md-4">
         <h2>Support</h2>
         <ul>
-          <li><a href="/get_involved/gala2016support">Become a sponsor today</a></li>
-          <li><a href="/get_involved/gala2016sponsors">View Sponsors</a></li>
+          <li><a href="/get_involved/gala2016register">Become a sponsor today</a></li>
+          <li><a href="#sponsors">View Sponsors</a></li>
         </ul>
       </div>
     </div>
+    <hr class="full-rule">
     <div class="row">
     <div class="col-md-4">
-      <hr class="full-rule">
       <p class="text-center">
         <h2>Beacon - $5,000</h2>
       </p>
@@ -44,11 +44,10 @@ tags:
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
       </p>
       <p>
-      <a href="">Support now</a>
+      <a href="/get_involved/gala2016register/">Support now</a>
       </p>
     </div>
     <div class="col-md-4">
-      <hr class="full-rule">
       <p class="text-center">
         <h2>Lantern - $2,500</h2>
       </p>
@@ -56,11 +55,10 @@ tags:
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
       </p>
       <p>
-      <a href="">Support now</a>
+      <a href="/get_involved/gala2016register/">Support now</a>
       </p>
     </div>
     <div class="col-md-4">
-      <hr class="full-rule">
       <p class="text-center">
         <h2>Twinkle - $1,250</h2>
       </p>
@@ -68,10 +66,11 @@ tags:
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
       </p>
       <p>
-      <a href="">Support now</a>
+      <a href="/get_involved/gala2016register/">Support now</a>
       </p>
     </div>
   </div>
+    <h2></h2><a name="sponosors">Gala Sponsors</a></h2>
     <div class="row">
       <div class="col-md-4">
         <hr class="full-rule">
