--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -63,7 +63,7 @@ tags:
         <h2>Twinkle - $1,250</h2>
       </p>
       <p class="text-center partner">
-        <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        <a href="/get_involved/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg/298px-D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
