--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -41,7 +41,7 @@ tags:
         <h2>Beacon - $5,000</h2>
       </p>
       <p class="text-center partner">
-        <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        <a href="/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -52,7 +52,7 @@ tags:
         <h2>Lantern - $2,500</h2>
       </p>
       <p class="text-center partner">
-        <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        <a href="/get_involved/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
