--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -34,7 +34,10 @@ tags:
         </ul>
       </div>
     </div>
+    
+    
     <hr class="full-rule">
+    <h2><a name="sponosorship">Sponsorship Levels</a></h2>
     <div class="row">
     <div class="col-md-4">
       <p class="text-center">
@@ -70,10 +73,12 @@ tags:
       </p>
     </div>
   </div>
-    <h2></h2><a name="sponosors">Gala Sponsors</a></h2>
+  
+  
+  <hr class="full-rule">
+    <h2><a name="sponosors">Gala Sponsors</a></h2>
     <div class="row">
       <div class="col-md-4">
-        <hr class="full-rule">
         <p class="text-center partner">
           <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
         </p>
@@ -85,7 +90,6 @@ tags:
         </p>
       </div>
       <div class="col-md-4">
-        <hr class="full-rule">
         <p class="text-center partner">
           <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
         </p>
@@ -97,7 +101,6 @@ tags:
         </p>
       </div>
       <div class="col-md-4">
-        <hr class="full-rule">
         <p class="text-center partner">
           <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
         </p>
