--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -37,7 +37,7 @@ tags:
     
     
     <hr class="full-rule">
-    <h2><a name="sponosorship">Sponsorship Levels</a></h2>
+    <h2id="sponosorship">Sponsorship Levels</h2>
     <div class="row">
     <div class="col-md-4">
       <p class="text-center">
@@ -76,7 +76,7 @@ tags:
   
   
   <hr class="full-rule">
-    <h2><a name="sponosors">Gala Sponsors</a></h2>
+    <h2 id="sponosors">Gala Sponsors</h2>
     <div class="row">
       <div class="col-md-4">
         <p class="text-center partner">
