--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -37,14 +37,14 @@ tags:
     
     
     <hr class="full-rule">
-    <h2id="sponosorship">Sponsorship Levels</h2>
+    <h2 id="sponosorship">Sponsorship Levels</h2>
     <div class="row">
     <div class="col-md-4">
       <p class="text-center">
         <h2>Beacon - $5,000</h2>
       </p>
-      <p class="text-center partner">
-        <a href="/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
+      <p class="text-center">
+        <a href="/get_involved/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -54,7 +54,7 @@ tags:
       <p class="text-center">
         <h2>Lantern - $2,500</h2>
       </p>
-      <p class="text-center partner">
+      <p class="text-center">
         <a href="/get_involved/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
       </p>
       <p>
@@ -65,7 +65,7 @@ tags:
       <p class="text-center">
         <h2>Twinkle - $1,250</h2>
       </p>
-      <p class="text-center partner">
+      <p class="text-center">
         <a href="/get_involved/gala2016register/"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg/298px-D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg"></a>
       </p>
       <p>
@@ -76,7 +76,7 @@ tags:
   
   
   <hr class="full-rule">
-    <h2 id="sponosors">Gala Sponsors</h2>
+    <h2 id="sponsors">Gala Sponsors</h2>
     <div class="row">
       <div class="col-md-4">
         <p class="text-center partner">
