--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -78,37 +78,13 @@ tags:
   <hr class="full-rule">
     <h2 id="sponsors">Gala Sponsors</h2>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-offset-4 col-md-4">
         <p class="text-center partner">
-          <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
-        </p>
-        <p class="text-center">
+          <a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/233px-Symbol_partial_support_vote.svg.png"></a>
           <h2>Beacon Sponsor</h2>
         </p>
-        <p>
-          Blurb...
-        </p>
-      </div>
-      <div class="col-md-4">
-        <p class="text-center partner">
-          <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
-        </p>
         <p class="text-center">
-          <h2>Beacon Sponsor</h2>
-        </p>
-        <p>
-          Blurb...
-        </p>
-      </div>
-      <div class="col-md-4">
-        <p class="text-center partner">
-          <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
-        </p>
-        <p class="text-center">
-          <h2>Twinkle Sponsor</h2>
-        </p>
-        <p>
-          Blurb...
+            <a href="/get_involved/gala2016register/">Become our first sponsor!</a>
         </p>
       </div>
     </div>
