--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -80,8 +80,8 @@ tags:
     <div class="row">
       <div class="col-md-offset-4 col-md-4">
         <p class="text-center partner">
-          <a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/3/37/Symbol_partial_support_vote.svg"></a>
-          <h2><a href="/get_involved/gala2016register/">Beacon Sponsor</a></h2>
+          <a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>
+          <h2><a href="/get_involved/gala2016register/">Become our first sponsor!</a></h2>
         </p>
         <!--<p class="text-center">
             <a href="/get_involved/gala2016register/">Become our first sponsor!</a>
