--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -7,7 +7,7 @@ tags:
 ---
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">30th Anniversary Gala</h2>
-    <h3>Please reserve your seat tody for our 30th Anniversary Gala to honor those who are the lights for the San Antonio Christian Dental Clinic.</h3>
+    <h3>Please reserve your seat today for our 30th Anniversary Gala to honor those who are the lights for the San Antonio Christian Dental Clinic.</h3>
     <div class="row page">
       <div class="col-md-4">
         <h2>Details</h2>
