--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -10,7 +10,7 @@ tags:
     <h3>Please reserve your seat today for our 30th Anniversary Gala to honor those who are the lights for the San Antonio Christian Dental Clinic.</h3>
     <div class="row page">
       <div class="col-md-4">
-        <h2>Details</h2>
+        <h2 class="text-center">Details</h2>
         <ul>
           <li>Thursday, March 3rd 2016 6 O'Clock</li>
           <li>4100 N New Braunfels Ave</li>
@@ -19,7 +19,7 @@ tags:
         </ul>
       </div>
       <div class="col-md-4">
-        <h2>Why</h2>
+        <h2 class="text-center">Why</h2>
         <ul>
           <li>30th Anniversary Gala</li>
           <li>Honoring those who light our clinic</li>
@@ -27,7 +27,7 @@ tags:
         </ul>
       </div>
       <div class="col-md-4">
-        <h2>Support</h2>
+        <h2 class="text-center">Support</h2>
         <ul>
           <li><a href="/get_involved/gala2016register">Become a sponsor today</a></li>
           <li><a href="#sponsors">View Sponsors</a></li>
@@ -40,9 +40,7 @@ tags:
     <h2 id="sponosorship">Sponsorship Levels</h2>
     <div class="row">
     <div class="col-md-4">
-      <p class="text-center">
-        <h2>Beacon - $5,000</h2>
-      </p>
+      <h3 class="text-center">Beacon - $5,000</h3>
       <p class="text-center">
         <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
       </p>
@@ -51,9 +49,7 @@ tags:
       </p>
     </div>
     <div class="col-md-4">
-      <p class="text-center">
-        <h2>Lantern - $2,500</h2>
-      </p>
+      <h3 class="text-center">Lantern - $2,500</h3>
       <p class="text-center">
         <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg/298px-D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg"></a>
       </p>
@@ -62,9 +58,7 @@ tags:
       </p>
     </div>
     <div class="col-md-4">
-      <p class="text-center">
-        <h2>Twinkle - $1,250</h2>
-      </p>
+      <h3 class="text-center">Twinkle - $1,250</h3>
       <p class="text-center">
         <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
       </p>
