--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -72,12 +72,11 @@ tags:
   <hr class="full-rule">
     <h2 id="sponsors">Gala Sponsors</h2>
     <div class="row">
-      <div class="col-md-offset-4 col-md-4">
-        <p class="text-center partner">
-          <a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>
+      <div class="col-md-offset-4 col-md-4 text-center">
+          <!--<a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>-->
+          <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>
           <h2><a href="/get_involved/gala2016register/">Become our first sponsor!</a></h2>
-        </p>
-        <!--<p class="text-center">
+        <!--<p>
             <a href="/get_involved/gala2016register/">Become our first sponsor!</a>
         </p>-->
       </div>
