--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -74,7 +74,7 @@ tags:
     <div class="row">
       <div class="col-md-offset-4 col-md-4 text-center">
           <!--<a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>-->
-          <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>
+          <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>
           <h2><a href="/get_involved/gala2016register/">Become our first sponsor!</a></h2>
         <!--<p>
             <a href="/get_involved/gala2016register/">Become our first sponsor!</a>
