--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -42,7 +42,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Beacon - $5,000</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -51,7 +51,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Lantern - $2,500</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg/298px-D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg/298px-D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -60,7 +60,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Twinkle - $1,250</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
