--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -27,20 +27,11 @@ tags:
 </div>
 
 <div class="row text-left hidden" id="failedToLoad">
-  <div class="col-sm-6 col-sm-offset-3">
-    <div class="alert alert-danger" role="alert">
+  <div class="col-sm-8 col-sm-offset-1">
       <h4>
-        <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-        Unable to reach secure banking service
+        Falling back to Vanco Donation form
       </h4>
-      <iframe seamless width="100%" height="1200" src="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0="></iframe>
-      <p>Contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org</a></p>
-      <p>Donate through 3rd party: 
-        <a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0="
-          target="_blank">
-          click here
-        </a>
-    </div>
+      <iframe seamless width="500" height="100%" src="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0="></iframe>
   </div>
 </div>
 
