--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -9,17 +9,31 @@ tags:
     <h2 class="bs-docs-featurette-title">Special Events.</h2>
     <div class="row page">
       <div class="col-md-6">
-        <ul>
-          <li><a href="/get_involved/gala2016/">30th Anniversary Gala</a></li>
-          <li>RSVP: <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></li>
-          <li><a href="/get_involved/gala2016sponsors">Event Sponsors</a></li>
-          <li><a href="/get_involved/gala2016register">Register</a></li>
-        </ul>
-        
+          <h3><a href="/get_involved/gala2016/">30th Anniversary Gala</a></h3>
+          <p>Thursday, March 3rd, 2016 ~ 6 PM</p>
+          <p>San Antonio Country Club</p>
+          <p>Questions: <a
+          href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></p>
+          <p><a href="/get_involved/gala2016register">Become a Table Sponsor</a></p>
+          <p><a href="/get_involved/gala2016register">Purchase Individual Tickets</a></li>
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Save the
-        date for 2016 Gala, 30th anniverary" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Save the date for 2016 Gala, 30th anniverary" class="bs-docs-featurette-img img-responsive">
+      </div>
+
+      <div class="col-md-6">
+        <h3>Upcoming Events...</h3> 
+        <p>Clinic Tours:</p>
+        <ul>
+          <li> Thursday, January 28, 2016 ~ 9:30-10:30 AM (breakfast included!)</li>
+          <li> Thursday, February 4, 2016 ~ 11:30-12:30 AM (lunch included!)</li>
+        </ul>
+        <p>1st Annual Church Outreach Clinic ~ May 14, 2016</p>
+        <p>6th Annual Smiles of Hope Clinic ~ October 8th, 2016</p>
+      </div> 
+      <div class="col-md-4">
+        <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Dentists
+        at work" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
 </div>
