--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -12,24 +12,27 @@ tags:
       <div class="col-md-4">
         <h2 class="text-center">Details</h2>
         <ul>
-          <li>Thursday, March 3rd 2016 6 O'Clock</li>
-          <li>4100 N New Braunfels Ave</li>
+          <li>When: Thursday, March 3rd 2016 ~ 6 O'Clock</li>
+          <li>Where: 4100 N New Braunfels Ave</li>
           <li>San Antonio, TX 78209</li>
           <li><a href="https://www.google.com/maps/place/San+Antonio+Country+Club/@29.4667884,-98.4601072,15z/data=!4m2!3m1!1s0x0:0x293ad8d6ae93106f">Google Map Link</a></li>
+          <li>Valet Parking</li>
         </ul>
       </div>
       <div class="col-md-4">
         <h2 class="text-center">Why</h2>
         <ul>
           <li>30th Anniversary Gala</li>
-          <li>Honoring those who light our clinic</li>
-          <li>...a lamp to my feet and a light to my path. Psalm 119:105</li>
+          <li>Honoring those who founded our clinic</li>
+          <li>...a lamp to my feet and a light to my path. <sub>Psalm 119:105</sub></li>
         </ul>
       </div>
       <div class="col-md-4">
         <h2 class="text-center">Support</h2>
         <ul>
-          <li><a href="/get_involved/gala2016register">Become a sponsor today</a></li>
+          <li><a href="/get_involved/gala2016register">Become a Table Sponsor Today</a></li>
+          <li><a href="/get_involved/gala2016register">Purchase Individual Tickets Today</a></li>
+          <li>Questions, contact Susan at <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a> or (210)220-2304</li>
           <li><a href="#sponsors">View Sponsors</a></li>
         </ul>
       </div>
@@ -58,7 +61,7 @@ tags:
       </p>
     </div>
     <div class="col-md-4">
-      <h3 class="text-center">Twinkle - $1,250</h3>
+      <h3 class="text-center">Luminaria - $1,250</h3>
       <p class="text-center">
         <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
       </p>
