--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -13,17 +13,14 @@ tags:
 
   <hr class="half-rule">
 
-<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
-<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/additional-methods.min.js"></script>
+<script type="text/javascript" src="/static/lib/jquery.validate.min.js"></script>
+<script type="text/javascript" src="/static/lib/additional-methods.min.js"></script>
 <script type="text/javascript" src="/static/scripts/errorcodes.json" defer></script>
 <script type="text/javascript" src="/static/scripts/subsetsum.js" defer></script>
 <script type="text/javascript" src="/static/scripts/vancoServices.js" defer></script>
+
 <div class="bs-docs-featurette border1">
   <span id="alertfield"></span>
-  <h3 class="donate bs-docs-featurette-title">
-    Help our Mission by Making a Monetary Donation
-  </h3>
-
 </div>
 
 <div class="row text-center" id="loading_init">
