--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -45,7 +45,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Beacon - $5,000</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Light_Painting_1_-_Booyeembara_Park.jpg/320px-Light_Painting_1_-_Booyeembara_Park.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/LighthouseBeacon.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -63,7 +63,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Luminaria - $1,250</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/2012-03-21_21-34-00-startrails.jpg/320px-2012-03-21_21-34-00-startrails.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/LuminariaI.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
