--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -11,8 +11,7 @@ tags:
     <div class="row page">
       <div class="col-md-4">
         <h2 class="text-center">Details</h2>
-        <ul style="list-style-image: url('https://commons.wikimedia.org/wiki/File:AP_Icon.svg#/media/File:AP_Icon.svg');">
-        <!--<ul>-->
+        <ul list-style: url("http://png.com/ellipse.png") disc>
           <li>When: Thursday, March 3rd 2016 ~ 6 O'Clock</li>
           <li>Where: 4100 N New Braunfels Ave</li>
           <li>San Antonio, TX 78209</li>
