--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -11,7 +11,7 @@ tags:
     <div class="row page">
       <div class="col-md-4">
         <h2 class="text-center">Details</h2>
-        <ul style="list-style: url('https://upload.wikimedia.org/wikipedia/commons/b/bd/Ap_icon.png') disc;">
+        <ul class="cross">
           <li>When: Thursday, March 3rd 2016 ~ 6 O'Clock</li>
           <li>Where: 4100 N New Braunfels Ave</li>
           <li>San Antonio, TX 78209</li>
@@ -21,7 +21,7 @@ tags:
       </div>
       <div class="col-md-4">
         <h2 class="text-center">Why</h2>
-        <ul>
+        <ul class="cross">
           <li>30th Anniversary Gala</li>
           <li>Honoring those who founded our clinic</li>
           <li>...a lamp to my feet and a light to my path. <sub>Psalm 119:105</sub></li>
@@ -29,7 +29,7 @@ tags:
       </div>
       <div class="col-md-4">
         <h2 class="text-center">Support</h2>
-        <ul>
+        <ul class="cross">
           <li><a href="/get_involved/gala2016register">Become a Table Sponsor Today</a></li>
           <li><a href="/get_involved/gala2016register">Purchase Individual Tickets Today</a></li>
           <li>Questions, contact Susan at <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a> or (210)220-2304</li>
