--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -6,6 +6,7 @@ tags:
   - sa-cdc
 ---
 <script src="/static/scripts/bootbox.min.js"></script>
+<script src="/static/scripts/date.js" defer></script>
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">Seeking Dental Care</h2>
     <p class="lead">
