Remove SACDC acronym

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -10,7 +10,7 @@ tags:
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">Seeking Dental Care</h2>
     <p class="lead">
-      SACDC provides free dental care for low income and homeless Bexar County
+      San Antonio Christian Dental Clinic provides free dental care for low income and homeless Bexar County
       adults. Before you schedule a visit, please fill out the form on this
       page.**
     </p>
