--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -32,8 +32,7 @@ tags:
         <p>6th Annual Smiles of Hope Clinic ~ October 8th, 2016</p>
       </div> 
       <div class="col-md-4">
-        <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Dentists
-        at work" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/IMG_1.jpg" alt="Dentists at work" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
 </div>
