--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -10,15 +10,17 @@ tags:
     <div class="row page">
       <div class="col-md-6">
           <h3><a href="/get_involved/gala2016/">30th Anniversary Gala</a></h3>
-          <p>Thursday, March 3rd, 2016 ~ 6 PM</p>
-          <p>San Antonio Country Club</p>
-          <p>Questions: <a
-          href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></p>
-          <p><a href="/get_involved/gala2016register">Become a Table Sponsor</a></p>
-          <p><a href="/get_involved/gala2016register">Purchase Individual Tickets</a></li>
+          <ul class="cross">
+          <li>Thursday, March 3rd, 2016 ~ 6 PM</li>
+          <li>San Antonio Country Club</li>
+          <li>Questions: <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></li>
+          <li><a href="/get_involved/gala2016register">Become a Table Sponsor</a></li>
+          <li><a href="/get_involved/gala2016register">Purchase Individual Tickets</a></li>
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Save the date for 2016 Gala, 30th anniverary" class="bs-docs-featurette-img img-responsive">
+        <a href="/get_involved/gala2016/">
+          <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Save the date for 2016 Gala, 30th anniverary" class="bs-docs-featurette-img img-responsive">
+        </a>
       </div>
 
       <div class="col-md-6">
