--- a/content/gala2016.html
+++ b/content/gala2016.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=/get_involved/gala2016register" />
+<meta http-equiv="refresh" content="0; url=https://sachristiandental.org/get_involved/gala2016register/" />
 </head>
 </html>
