--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -54,7 +54,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Lantern - $2,500</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg/298px-D%C3%BClmen%2C_Kirchspiel%2C_St.-Jakobus-Kirche_--_2015_--_5549.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/Lantern.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
