--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -45,7 +45,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Beacon - $5,000</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/LighthouseBeacon.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="bs-docs-featurette-img img-responsive" src="/static/imgs/events/LighthouseBeacon.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -54,7 +54,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Lantern - $2,500</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/Lantern.png"></a>
+        <a href="/get_involved/gala2016register/"><img class="bs-docs-featurette-img img-responsive" src="/static/imgs/events/Lantern.png"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
@@ -63,7 +63,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Luminaria - $1,250</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/LuminariaI.jpg"></a>
+        <a href="/get_involved/gala2016register/"><img class="bs-docs-featurette-img img-responsive" src="/static/imgs/events/LuminariaI.jpg"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
