--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -54,7 +54,7 @@ tags:
     <div class="col-md-4">
       <h3 class="text-center">Lantern - $2,500</h3>
       <p class="text-center">
-        <a href="/get_involved/gala2016register/"><img class="bs-docs-featurette-img img-responsive" src="/static/imgs/events/Lantern.png"></a>
+        <a href="/get_involved/gala2016register/"><img style="height: 259 px; width: auto;" class="bs-docs-featurette-img img-responsive" src="/static/imgs/events/Lantern.png"></a>
       </p>
       <p>
       <a href="/get_involved/gala2016register/">Support now</a>
