--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -6,12 +6,12 @@ tags:
   - service
 ---
 <div class="bs-docs-featurette">
-    <h2 class="bs-docs-featurette-title">Special Events.</h2>
+    <h2 class="bs-docs-featurette-title">Special Events</h2>
     <div class="row page">
       <div class="col-md-6">
           <h3><a href="/get_involved/gala2016/">30th Anniversary Gala</a></h3>
           <ul class="cross">
-          <li>Thursday, March 3rd, 2016 ~ 6 PM</li>
+          <li>Thursday, March 3rd, 2016 ~ 6 pm</li>
           <li>San Antonio Country Club</li>
           <li>Questions: <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></li>
           <li><a href="/get_involved/gala2016register">Become a Table Sponsor</a></li>
@@ -27,8 +27,10 @@ tags:
         <h3>Upcoming Events...</h3> 
         <p>Clinic Tours:</p>
         <ul>
-          <li> Thursday, January 28, 2016 ~ 9:30-10:30 AM (breakfast included!)</li>
-          <li> Thursday, February 4, 2016 ~ 11:30-12:30 AM (lunch included!)</li>
+          <li> Thursday, January 28, 2016 ~ 9:30-10:30 am (breakfast included!)</li>
+          <li> Thursday, February 4, 2016 ~ 11:30-12:30 am (lunch included!)</li>
+          <li> Interested but can't work these dates into your schedule? We'll be happy to arrange a special tour.</li>
+          <li> Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</li>
         </ul>
         <p>1st Annual Church Outreach Clinic ~ May 14, 2016</p>
         <p>6th Annual Smiles of Hope Clinic ~ October 8th, 2016</p>
