--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -26,7 +26,7 @@ tags:
       <div class="col-md-6">
         <h3>Upcoming Events...</h3> 
         <p>Clinic Tours:</p>
-        <ul>
+        <ul class="cross">
           <li> Thursday, January 28, 2016 ~ 9:30-10:30 am (breakfast included!)</li>
           <li> Thursday, February 4, 2016 ~ 11:30-12:30 am (lunch included!)</li>
           <li> Interested but can't work these dates into your schedule? We'll be happy to arrange a special tour.</li>
