--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -15,7 +15,8 @@ tags:
 
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">30th Anniversary Gala</h2>
-    <h3>Please reserve your seat today for our 30th Anniversary Gala to honor those who are the lights for the San Antonio Christian Dental Clinic.</h3>
+    <h3>Please reserve your seat today for our 30th Anniversary Gala to honor those who are the lights for the
+      <br>San Antonio Christian Dental Clinic.</h3>
     <div class="row page">
       <div class="col-md-4">
         <h2 class="text-center">Details</h2>
@@ -30,9 +31,9 @@ tags:
       <div class="col-md-4">
         <h2 class="text-center">Why</h2>
         <ul class="cross">
-          <li>30th Anniversary Gala</li>
+          <li>Recognizing supporters like <b>you</b>..our volunteers and donors</li>
           <li>Honoring those who founded our clinic</li>
-          <li>...a lamp to my feet and a light to my path. <sub>Psalm 119:105</sub></li>
+          <li>...a lamp to my feet and a light to my path <sub>Psalm 119:105</sub></li>
         </ul>
       </div>
       <div class="col-md-4">
