--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -21,7 +21,7 @@ tags:
       <div class="col-md-4">
         <h2 class="text-center">Details</h2>
         <ul class="cross">
-          <li>When: Thursday, March 3rd 2016 ~ 6 PM</li>
+          <li>When: Thursday, March 3rd 2016 ~ 6 pm</li>
           <li>Where: 4100 N New Braunfels Ave</li>
           <li>San Antonio, TX 78209</li>
           <li><a href="https://www.google.com/maps/place/San+Antonio+Country+Club/@29.4667884,-98.4601072,15z/data=!4m2!3m1!1s0x0:0x293ad8d6ae93106f">Google Map Link</a></li>
