--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -252,7 +252,7 @@ tags:
     </div>
 
     <div id="transaction-CC-block" style="display: none;">
-      <form class="CC form" role="form" id="CC-form" action="https://vancoservices.com/cgi-bin/wsnvp.vps" method="get">
+      <form class="CC form" role="form" id="CC-form" action="getVancoNVP_URL();" method="get">
         <fieldset>
           <div class="row text-left">
             <div class="col-sm-offset-4 col-xs-12 col-sm-4">
