--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -252,7 +252,7 @@ tags:
     </div>
 
     <div id="transaction-CC-block" style="display: none;">
-      <form class="CC form" role="form" id="CC-form" action="getVancoNVP_URL();" method="get">
+      <form class="CC form vanco_nvp" role="form" id="CC-form" method="get">
         <fieldset>
           <div class="row text-left">
             <div class="col-sm-offset-4 col-xs-12 col-sm-4">
@@ -303,7 +303,7 @@ tags:
     </div>
 
     <div id="transaction-C-block" style="display: none;">
-      <form class="CS form" role="form" id="C-form" action="https://vancoservices.com/cgi-bin/wsnvp.vps" method="get">
+      <form class="CS form vanco_nvp" role="form" id="C-form" method="get">
         <fieldset>
           <div class="row text-left">
             <div class="col-sm-4 col-sm-offset-4">
@@ -332,7 +332,7 @@ tags:
     </div>
 
     <div id="transaction-S-block" style="display: none;">
-      <form class="CS form" role="form" id="S-form" action="https://vancoservices.com/cgi-bin/wsnvp.vps" method="get">
+      <form class="CS form vanco_nvp" role="form" id="S-form" method="get">
         <fieldset>
           <div class="row text-left">
             <div class="col-sm-4 col-sm-offset-4">
