--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -39,8 +39,8 @@ tags:
 </div>
 
 <div class="hidden donate row text-center" id="donationApp">
-  <div class="col-md-8 col-md-offset-2 alert alert-info" id="dev-warning" role="alert">
-    In Development Environment -- Use only pretend values, you been warned.
+  <div class="col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
+    <span class="glyphicon glyphicon-alert"></span>In Development Environment -- Use only test values, you been warned.
   </div>
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
     <div class="row" id="status-bar">
