--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -39,7 +39,7 @@ tags:
 </div>
 
 <div class="hidden donate row text-center" id="donationApp">
-  <div class="col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
+  <div class="hidden col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
     In Development Environment -- Use only test values, you been warned.
   </div>
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
