--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -87,7 +87,7 @@ tags:
     <div class="row">
       <div class="col-md-offset-4 col-md-4 text-center">
           <!--<a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>-->
-          <a href="/get_involved/gala2016register/"><img class="frontpage img-responsive" src="/static/imgs/events/VEF_Logo_STACKED.jpg"></a>
+          <a href="http://www.valero.com/community/community_giving/pages/home.aspx"><img class="frontpage img-responsive" src="/static/imgs/events/VEF_Logo_STACKED.jpg"></a>
           
           <p>
             <b>Beacon Sponsor</b>
