--- a/content/index.html
+++ b/content/index.html
@@ -21,6 +21,8 @@ tags:
 		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
+                <br>
+                <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
           </div>
           <div class="carousel-caption captionsmallleft">
             <h4 class="captionsmall">Help us Bring Back a Smile</h4>
@@ -41,6 +43,8 @@ tags:
 		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
+                <br>
+                <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
           </div>
           <div class="carousel-caption captionsmallright">
               <h4 class="captionsmall">Dental Care for Those in Need</h4>
@@ -63,6 +67,8 @@ tags:
 		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
+                <br>
+                <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
           </div>
           <div class="carousel-caption captionsmallleft">
               <h4 class="captionsmall">The Need is Great</h4>
