--- a/content/index.html
+++ b/content/index.html
@@ -21,7 +21,7 @@ tags:
 		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
-                <div>
+                <div style="padding-top: 15px;">
                   <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
                 </div>
           </div>
@@ -44,7 +44,7 @@ tags:
 		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
-                <div>
+                <div style="padding-top: 15px;">
                   <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
                 </div>
           </div>
@@ -69,7 +69,7 @@ tags:
 		'eventValue': 10
 	});">Donate Now</a>
                 <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
-                <div>
+                <div style="padding-top: 15px;">
                   <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
                 </div>
           </div>
