Added MHM as sponsor

--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -87,9 +87,16 @@ tags:
   <hr class="full-rule">
     <h2 id="sponsors">Gala Sponsors</h2>
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 text-center">
-          <!--<a href="" target="_blank"><img class="partner img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Symbol_partial_support_vote.svg/200px-Symbol_partial_support_vote.svg.png"></a>-->
+      <div class="col-md-offset-2 col-md-4 text-center">
           <a href="http://www.valero.com/community/community_giving/pages/home.aspx"><img class="frontpage img-responsive" src="/static/imgs/events/VEF_Logo_STACKED.png"></a>
+          
+          <p>
+            <b>Beacon Sponsor</b>
+          </p>
+      </div>
+      <div class="col-md-offset-2 col-md-4 text-center">
+          <a
+            href="http://www.mhm.org"><img class="frontpage img-responsive" src="<img class="partner img-responsive" src="/static/imgs/logos/MHM.png">"></a>
           
           <p>
             <b>Beacon Sponsor</b>
