--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -95,8 +95,7 @@ tags:
           </p>
       </div>
       <div class="col-md-offset-2 col-md-4 text-center">
-          <a
-            href="http://www.mhm.org"><img class="frontpage img-responsive" src="<img class="partner img-responsive" src="/static/imgs/logos/MHM.png">"></a>
+          <a href="http://www.mhm.org"><img class="frontpage img-responsive" src="/static/imgs/logos/MHM.png"></a>
           
           <p>
             <b>Beacon Sponsor</b>
