--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -94,8 +94,8 @@ tags:
             <b>Beacon Sponsor</b>
           </p>
       </div>
-      <div class="col-md-offset-2 col-md-4 text-center">
-          <a href="http://www.mhm.org"><img class="frontpage img-responsive" src="/static/imgs/logos/MHM.png"></a>
+      <div class="col-md-offset-1 col-md-4 text-center">
+          <a href="http://www.mhm.org"><img style="max-height: 200px;" class="frontpage img-responsive" src="/static/imgs/logos/MHM.png"></a>
           
           <p>
             <b>Beacon Sponsor</b>
