--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -127,5 +127,19 @@ tags:
             <b>Luminaria Sponsor</b>
           </p>
       </div>
+      <div class="col-md-offset-1 col-md-4 text-center">
+          <a href="https://www.swbc.com/about/about-swbc/in-the-community"><img style="max-height: 180px;" class="frontpage img-responsive" src="/static/imgs/events/SWBC_logo.png"></a>
+          
+          <p>
+            <b>Luminaria Sponsor</b>
+          </p>
+      </div>
+      <div class="col-md-offset-1 col-md-6 text-center">
+          <a href="http://www.uthscsa.edu/"><img style="max-height: 180px;" class="frontpage img-responsive" src="/static/imgs/events/hsc_logo.png"></a>
+          
+          <p>
+            <b>Luminaria Sponsor</b>
+          </p>
+      </div>
     </div>
 </div>
