--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -142,5 +142,21 @@ tags:
             <b>Luminaria Sponsor</b>
           </p>
       </div>
+            <div class="col-md-offset-1 col-md-6 text-center">
+          <br><br>
+          <a href="http://www.salawyer.com/"><img style="max-height: 180px;" class="frontpage img-responsive" src="/static/imgs/events/CH_logo.png"></a>
+          
+          <p>
+            <b>Luminaria Sponsor</b>
+          </p>
+      </div>
+            <div class="col-md-offset-1 col-md-6 text-center">
+          <br><br>
+          <a href="http://www.drjohnschmitz.com/"><img style="max-height: 180px;" class="frontpage img-responsive" src="/static/imgs/events/Shavano_FS.PNG"></a>
+          
+          <p>
+            <b>Luminaria Sponsor</b>
+          </p>
+      </div>
     </div>
 </div>
