--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -111,8 +111,7 @@ tags:
             <b>Beacon Sponsor</b>
           </p>
       </div>
-      <div class="col-md-4 text-center">
-          <br><br><br><br>
+      <div class="col-offset-md-2 col-md-4 text-center">
           <a href="http://www.greeheyfoundation.org/">
             <img style="max-height: 180px;" class="frontpage img-responsive" src="/static/imgs/events/greehey.png">
           </a>
@@ -121,7 +120,7 @@ tags:
             <b>Beacon Sponsor</b>
           </p>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-offset-md-2 col-md-4 text-center">
           <a href="http://www.fbcsa.org"><img style="max-height: 180px;" class="frontpage img-responsive" src="/static/imgs/events/fbcsa.png"></a>
           
           <p>
