--- a/content/get_involved/store.html
+++ b/content/get_involved/store.html
@@ -13,7 +13,7 @@ tags:
 
   <hr class="half-rule">
 
-<div class="row text-left hidden" id="failedToLoad">
+<div class="row text-left">
   <div class="col-sm-8 col-sm-offset-1">
       <iframe seamless width="1000" height="900" src="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0="></iframe>
   </div>
