--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -35,7 +35,7 @@ tags:
   </div>
 </div>
 
-<div class="hidden donate row text-center" id="donationApp">
+<div ng-app="" class="hidden donate row text-center" id="donationApp">
   <div class="hidden col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
     In Development Environment -- Use only test values, you been warned. {{ first }}
   </div>
